# frust

./: .gitignore  CITATION.cff  README.md  meson.build
scripts/: benchmark.py  cavity_sign_problem.py  draw_lattice.py  draw_lattice_cavity.py  ed.py  ed_compare.py  ed_hamiltonian.py  lattice.py  model.py  projected_ed.py  quicktest.sh  requirements.txt
scripts/ed/: cavity_magnet.py  cluster_magnet.py  downfolded_coupling.py  hamiltonian.py  model_common.py
src/: basis.cpp  basis.h  bond.h  frust.cpp  frust.h  j_est.h  jdimcorr_est.h  jm.h  lattice.cpp  lattice.h  latticedef.cpp  latticedef.h  mag_est.h  main.cpp  measurement_settings.h  meson.build  opercode.h  sse_data.h  template_selector.h  util.h  vertex_data.cpp  vertex_data.h  vertices.cpp  vertices.h  worms.h  write_lattice.cpp  write_lattice.h
src/models/: cavity_magnet.cpp  cavity_magnet.h  cavity_magnet_def.cpp  cluster_magnet.cpp  cluster_magnet.h  cluster_magnet_def.cpp  cluster_magnet_def.h  meson.build  model.h  model_def.cpp  model_def.h
src/models/cavity_magnet/: basis.h  cavity_magnet.cpp  cavity_magnet.h  definitions.cpp  definitions.h  downfolded_coupling.cpp  downfolded_coupling.h  measurement_settings.h  meson.build  occupation_numbers.h  opstring_estimators.h  photon_est.h
src/models/cluster_magnet/: basis.cpp  basis.h  cluster_magnet.cpp  cluster_magnet.h  definitions.cpp  definitions.h  j_est.h  mag_est.h  measurement_settings.h  meson.build  opstring_estimators.h
src/models/common/: lattice.cpp  lattice.h  mag_est.h  spinop.cpp  spinop.h
src/models/util/: lattice.cpp  lattice.h
src/util/: kronecker_product.h  vec.h
subprojects/: catch2.wrap  highs.wrap  loadleveller.wrap  solp.wrap
subprojects/downfolded_peierls_coupling/: .gitignore  README.md  __init__.py  meson.build  pyproject.toml
subprojects/downfolded_peierls_coupling/src/: downfolded_peierls_coupling.cpp  downfolded_peierls_coupling.h  meson.build
subprojects/downfolded_peierls_coupling/test/: benchmark.cpp  meson.build  unit_tests.cpp
subprojects/packagefiles/highs/: meson.build
subprojects/packagefiles/highs/src/: libhighs_export.h
test/: gen_result_files  gen_seeded_job.sh  meson.build  simtest.py  test_cavity_magnet.cpp  test_equal_hamiltonian.py  test_opercode.cpp  test_simulation.py  test_spinop.cpp  test_util.cpp  test_worms.cpp
test/testjobs/: bilayer  bilayer.ed.json  cavity_degenerate  cavity_empty  cavity_honeycomb  cavity_square  chirality  chirality_tauy  diamond_square_dim_spi  dimerized_bilayer  dimerized_bilayer.ed.json  jobconfig.yml  kagome  kagome_dim_spi  kagome_tri  maxwormlen  maxwormlen.ed.json  meson.build  shastry_sutherland  square  square1  triangle  triangle.ed.json  triangle_square  triangle_square3  triangle_square4  triangle_square4.ed.json  triangle_square_bases  triangle_square_rot
test/testjobs/ed/: bilayer.ed.json  cavity_degenerate.ed.json  cavity_empty.ed.json  cavity_honeycomb.ed.json  cavity_square.ed.json  chirality.ed.json  diamond_square_dim_spi.ed.json  dimerized_bilayer.ed.json  kagome.ed.json  kagome_dim_spi.ed.json  kagome_tri.ed.json  shastry_sutherland.ed.json  square.ed.json  triangle.ed.json  triangle_square.ed.json  triangle_square3.ed.json  triangle_square4.ed.json  triangle_square_rot.ed.json
test/testjobs/seeded/: bilayer.seeded.json  cavity_degenerate.seeded.json  cavity_empty.seeded.json  cavity_honeycomb.seeded.json  cavity_square.seeded.json  chirality.seeded.json  diamond_square_dim_spi.seeded.json  dimerized_bilayer.seeded.json  kagome.seeded.json  kagome_dim_spi.seeded.json  kagome_tri.seeded.json  shastry_sutherland.seeded.json  square.seeded.json  triangle.seeded.json  triangle_square.seeded.json  triangle_square3.seeded.json  triangle_square4.seeded.json  triangle_square_rot.seeded.json
test/testjobs/triangle_square_bases.data/: parameters.json
