test_jobfiles = files([
  'bilayer',
  'chirality',
  'diamond_square_dim_spi',
  'dimerized_bilayer',
  'kagome',
  'kagome_dim_spi',
  'kagome_tri',
# 'maxwormlen' XXX: maxwormlen is not confirmed to work
  'shastry_sutherland',
  'square',
  'triangle',
  'triangle_square4',
  'triangle_square',
  'triangle_square3',
  'triangle_square_rot',
])
